--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,11 @@ python = "^3.11"
 celery = "^5.3.6"
 redis = "^5.0.1"
 django = "^5.0.2"
+selenium = "^4.17.2"
+webdriver-manager = "^4.0.1"
+bs4 = "^0.0.2"
+django-filter = "^23.5"
+django-widget-tweaks = "^1.5.0"
 
 
 [build-system]
