--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,18 @@ readme = "README.md"
 python = "^3.11"
 celery = "^5.3.6"
 redis = "^5.0.1"
-django = "^5.0.2"
+django = "^4.0"
 selenium = "^4.17.2"
 webdriver-manager = "^4.0.1"
 bs4 = "^0.0.2"
 django-filter = "^23.5"
 django-widget-tweaks = "^1.5.0"
+gunicorn = "^21.2.0"
+django-celery-beat = "^2.5.0"
+django-extensions = "^3.2.3"
+pillow = "^10.2.0"
+uvicorn = "^0.27.1"
+whitenoise = "^6.6.0"
 
 
 [build-system]
